# compiler

./: README.md  compiler.cabal
src/: main.hs
src/lexer/: lex.hs
src/parser/: parse.hs
